[gd_scene load_steps=13 format=3 uid="uid://c3brmvfq2chmc"]

[ext_resource type="Script" path="res://Scripts/Game/GameManager.gd" id="1_eklrh"]
[ext_resource type="PackedScene" uid="uid://2lifl5c0bvhp" path="res://Nodes/Scenes/world.tscn" id="2_eode3"]
[ext_resource type="PackedScene" uid="uid://benpntdnc6jjh" path="res://Nodes/objective.tscn" id="2_lt11a"]
[ext_resource type="Script" path="res://Scripts/Menus/Pause.gd" id="3_xychr"]
[ext_resource type="Script" path="res://Scripts/Menus/MenuButton.gd" id="5_narkc"]
[ext_resource type="Material" uid="uid://ccy71nrc7dqc4" path="res://Resources/Materials/LabelShader.tres" id="6_bo2dc"]
[ext_resource type="Script" path="res://Scripts/Menus/DialogueWindow.gd" id="7_j4v7v"]
[ext_resource type="Theme" uid="uid://d1cfjy5fdtqnu" path="res://Resources/Themes/RightButton.tres" id="8_hd31q"]
[ext_resource type="Texture2D" uid="uid://dpqc7yd7vb0s" path="res://Assets/Art/UI/portraits/crocodile.png" id="8_pjdl5"]
[ext_resource type="Theme" uid="uid://6cgu0y46o3ww" path="res://Resources/Themes/HUD.tres" id="11_yrm1c"]

[sub_resource type="Gradient" id="Gradient_bmdad"]
colors = PackedColorArray(0, 0, 0, 1, 0.133333, 0.12549, 0.203922, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0ipdo"]
gradient = SubResource("Gradient_bmdad")
width = 40
height = 40
fill = 2
fill_from = Vector2(0.5, 0.5)

[node name="Game" type="Node"]
script = ExtResource("1_eklrh")
objective = ExtResource("2_lt11a")

[node name="World" parent="." instance=ExtResource("2_eode3")]

[node name="Pause" type="CanvasLayer" parent="."]
layer = 8
visible = false
script = ExtResource("3_xychr")

[node name="c" type="Control" parent="Pause"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("11_yrm1c")

[node name="Shade" type="ColorRect" parent="Pause/c"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.34902)

[node name="Panel" type="Panel" parent="Pause/c"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 112.0
offset_top = -308.0
offset_right = 272.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)

[node name="BackButton" type="Button" parent="Pause/c/Panel"]
layout_mode = 0
offset_left = -2.0
offset_top = 122.0
offset_right = 62.0
offset_bottom = 147.0
script = ExtResource("5_narkc")
backButton = true

[node name="Label" type="Label" parent="Pause/c/Panel/BackButton"]
material = ExtResource("6_bo2dc")
layout_mode = 0
offset_left = 12.0
offset_top = 4.0
offset_right = 52.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "Resume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="Button" parent="Pause/c/Panel"]
layout_mode = 0
offset_left = 14.0
offset_top = 33.0
offset_right = 116.0
offset_bottom = 58.0
script = ExtResource("5_narkc")
focusMove = Vector2(-6, 0)

[node name="Label" type="Label" parent="Pause/c/Panel/MenuButton"]
material = ExtResource("6_bo2dc")
layout_mode = 0
offset_left = 14.0
offset_top = 4.0
offset_right = 58.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="Button" parent="Pause/c/Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 61.0
offset_right = 122.0
offset_bottom = 86.0
script = ExtResource("5_narkc")
focusMove = Vector2(-6, 0)

[node name="Label" type="Label" parent="Pause/c/Panel/OptionsButton"]
material = ExtResource("6_bo2dc")
layout_mode = 0
offset_left = 10.0
offset_top = 4.0
offset_right = 50.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="Pause/c/Panel"]
layout_mode = 0
offset_left = 26.0
offset_top = 89.0
offset_right = 128.0
offset_bottom = 114.0
script = ExtResource("5_narkc")
focusMove = Vector2(-6, 0)

[node name="Label" type="Label" parent="Pause/c/Panel/RestartButton"]
material = ExtResource("6_bo2dc")
layout_mode = 0
offset_left = 12.0
offset_top = 4.0
offset_right = 52.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pause" type="Label" parent="Pause/c/Panel"]
material = ExtResource("6_bo2dc")
layout_mode = 0
offset_left = 32.0
offset_top = 13.0
offset_right = 84.0
offset_bottom = 29.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 16
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dialogue" type="CanvasLayer" parent="."]
layer = 8
script = ExtResource("7_j4v7v")

[node name="c" type="Control" parent="Dialogue"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("11_yrm1c")

[node name="Shade" type="ColorRect" parent="Dialogue/c"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.34902)

[node name="Panel" type="Panel" parent="Dialogue/c"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -344.0
offset_top = -288.0
offset_right = -172.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)

[node name="Option1Button" type="Button" parent="Dialogue/c/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -2.0
offset_top = 122.0
offset_right = 72.0
offset_bottom = 147.0
script = ExtResource("5_narkc")

[node name="Label" type="Label" parent="Dialogue/c/Panel/Option1Button"]
material = ExtResource("6_bo2dc")
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 68.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Option2Button" type="Button" parent="Dialogue/c/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 122.0
offset_right = 174.0
offset_bottom = 147.0
theme = ExtResource("8_hd31q")
script = ExtResource("5_narkc")

[node name="Label" type="Label" parent="Dialogue/c/Panel/Option2Button"]
material = ExtResource("6_bo2dc")
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 68.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="Dialogue/c/Panel"]
unique_name_in_owner = true
material = ExtResource("6_bo2dc")
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 116.0
offset_bottom = 32.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 16
text = "Temp name"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Dialogue" type="Label" parent="Dialogue/c/Panel"]
unique_name_in_owner = true
material = ExtResource("6_bo2dc")
layout_mode = 0
offset_left = 16.0
offset_top = 30.0
offset_right = 116.0
offset_bottom = 120.0
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 8
text = "hehe, I say some funny things xD"
horizontal_alignment = 2
autowrap_mode = 2

[node name="HeadIcon" type="TextureRect" parent="Dialogue/c/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 120.0
offset_top = 12.0
offset_right = 160.0
offset_bottom = 52.0
texture = ExtResource("8_pjdl5")

[node name="IconBG" type="TextureRect" parent="Dialogue/c/Panel/HeadIcon"]
show_behind_parent = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("GradientTexture2D_0ipdo")

[connection signal="pressed" from="Pause/c/Panel/BackButton" to="Pause" method="ResumePressed"]
[connection signal="pressed" from="Pause/c/Panel/MenuButton" to="Pause" method="MainMenuPressed"]
[connection signal="pressed" from="Pause/c/Panel/OptionsButton" to="Pause" method="OptionsPressed"]
[connection signal="pressed" from="Pause/c/Panel/RestartButton" to="Pause" method="RestartPressed"]
[connection signal="pressed" from="Dialogue/c/Panel/Option1Button" to="Dialogue" method="OptionPressed" binds= [1]]
[connection signal="pressed" from="Dialogue/c/Panel/Option2Button" to="Dialogue" method="OptionPressed" binds= [2]]
